# chippy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
chippy/: __init__.py  core.py  graphics.py  instructions.py  keyboard.py  main.py
chippy.egg-info/: PKG-INFO  SOURCES.txt
chippy/games/chip8/: mVBRIX
tests/: tools.py
