[tool.poetry]
name = "chippy"
version = "0.3.0"
description = "A Chip8 / SCHIP emulator implemented in Python."
authors = ["Terence Norton <tjtnorton@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.*"
opencv-python = "4.6.0.66"
pygame = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
